--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "glob": "^7.1.3",
     "gulp": "^4.0.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-mocha": "^6.0.0",
     "gulp-nodemon": "^2.2.1",
-    "sinon": "^6.3.5"
+    "gulp-refresh": "^1.1.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.2",
+    "morgan": "^1.9.1",
+    "run-sequence": "^2.2.1",
+    "sinon": "^6.3.5",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "gulp-env": "^0.4.0",
