--- a/web.config
+++ b/web.config
@@ -8,7 +8,7 @@
       <rules>
         <rule name="DynamicContent">
           <match url="/*" />
-          <action type="Rewrite" url="app.js"/>
+          <action type="Rewrite" url="server.js"/>
         </rule>
       </rules>
     </rewrite>
