--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "glob": "^7.1.3",
     "gulp": "^4.0.0",
+    "gulp-eslint": "^5.0.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-mocha": "^6.0.0",
     "gulp-nodemon": "^2.2.1",
