--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.3.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "run-sequence": "^2.2.1",
     "sinon": "^6.3.5",
     "winston": "^2.3.1"
