--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.1",
     "run-sequence": "^2.2.1",
     "sinon": "^6.3.5",
+    "uuid": "^3.3.2",
     "winston": "^2.3.1"
   },
   "devDependencies": {
