--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-ntlm": "^2.3.0",
     "glob": "^7.1.3",
     "gulp": "^4.0.0",
     "gulp-eslint": "^5.0.0",
