--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "chalk": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "express-ntlm": "^2.3.0",
     "glob": "^7.1.3",
     "gulp": "^4.0.0",
     "gulp-eslint": "^5.0.0",
@@ -26,6 +25,7 @@
     "mongoose": "^5.3.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "node-sspi": "^0.2.3",
     "run-sequence": "^2.2.1",
     "sinon": "^6.3.5",
     "uuid": "^3.3.2",
